--- a/index0.html
+++ b/index0.html
@@ -19,9 +19,9 @@
     <button type="submit">Search</button>
   </form>
   <div id="results"></div>
-</div> -->
+</div>
 
-    
+     -->
   <div>
 
         <div class="sidebar">
@@ -106,7 +106,7 @@
 
             <div class="srchh">
                 <form id="searchForm" >
-               <input type="text" id="searchInput" class="mmm" placeholder="Search . . . . . . . . . . . ." required>
+               <input type="text" id="searchInput" name="search" class="mmm" placeholder="Search . . . . . . . . . . . ." required>
                <button class="sa" type="submit">Search</button>
              </form>
              <div id="results"></div>
@@ -448,5 +448,7 @@
             </div>
 
         </div>
+
+ <script src="script0.js"></script>
 </body>
 </html>
